NIFI-12220: Added ability to create Controller Services from migrateProperties. Added ability to get raw property values from PropertyConfiguration instead of just effective values. Updated TestRunner to allow for testing these migration methods.